src/objects/BE_Modal_Record_Form__mdt.object
<CustomObject>
    <fields>
        <fullName>Filter_SOQL__c</fullName>
        <label>Filter SOQL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_sObject_Access_Message__c</fullName>
        <inlineHelpText>Mensaje de error cuando el usuario no tiene acceso de visualización al objeto.</inlineHelpText>
        <label>No Access Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_sObject_Delete_Message__c</fullName>
        <inlineHelpText>Mensaje de error cuando el usuario no tiene acceso de eliminación al objeto.</inlineHelpText>
        <label>No Delete Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Records__c</fullName>
        <label>Order Records</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Records_per_page__c</fullName>
        <label>Records per page</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>delete_mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sObject_Target__c</fullName>
        <inlineHelpText>ApiName del objeto a mostrar</inlineHelpText>
        <label>sObject Target</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>view_mode__c</fullName>
        <label>View Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                    <label>View</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>View &amp; Edit</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <isActive>false</isActive>
                    <label>Creation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Modal Record Form</label>
    <listViews>
        <fullName>Modal_View</fullName>
        <columns>MasterLabel</columns>
        <columns>sObject_Target__c</columns>
        <columns>view_mode__c</columns>
        <columns>Records_per_page__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vista de Modales</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Modal Records Form</pluralLabel>
</CustomObject>